--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@ const translations = {
     thanks: "You're very welcome.",
     goodbye: "See you soon in eternal light! Frederick, having helped thousands of souls, surrounds you with his constant vigilance. You're no longer alone against the shadows, for know that his power transcends all darkness.",
     notUnderstood: "I didn't quite understand your question. Could you rephrase it please, maybe with different words, to help me understand better?",
-    notUnderstoodAfter: "It seems we're having trouble understanding each other. Perhaps it's time to consider a deep and complete curse removal to restore balance to all your energies. Our services start at €50 for detection, €250 for a full ritual and from €6.00 for an email consultation. You'll find all these helps on the website.",
+    notUnderstoodAfter: "It seems we're having trouble understanding each other. Perhaps it's time to consider a deep and complete curse removal to restore balance to all your energies. Our services start at $60 for detection, $290 for a full ritual and from $8.00 for an email consultation. You'll find all these helps on the website.",
     grave: "Your situation seems extremely concerning. It's imperative to act immediately. I recommend taking necessary measures without delay. Don't let the shadows take over eternally.",
     agree: "Right so, don't hesitate to ask other questions.",
 };
